Added initial files of architecture

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ packages = [{ include = "app" }]
 
 [tool.poetry.dependencies]
 python = ">=3.12,<4.0"
+google-cloud-storage = "^2.16.0"
 
 # Utilitários
 python-dotenv = "^1.0.1"
@@ -47,3 +48,13 @@ hook-config = ".pre-commit-config.yaml"
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+# Type stubs
+types-requests = "*"
+
+[[tool.mypy.overrides]]
+module = ["google.cloud", "google"]
+ignore_missing_imports = true
+
+[tool.mypy]
+ignore_missing_imports = true
