--- a/.github/workflows/deploy-composer.yml
+++ b/.github/workflows/deploy-composer.yml
@@ -18,7 +18,6 @@ env:
   CODE_PATH: grupo-2
   APP_ENV: production
   APP_BASE_PATH: /home/airflow/gcs/data/grupo-2
-  GOOGLE_APPLICATION_CREDENTIALS: ${{ github.workspace }}/gcloud/auth.json
 
 jobs:
 
@@ -39,25 +38,19 @@ jobs:
       - name: Checkout do código
         uses: actions/checkout@v3
 
+      - name: Autenticar via Service Account
+        uses: google-github-actions/auth@v2
+        with:
+          credentials_json: '${{ secrets.GCP_SA_KEY_JSON }}'
+
       - name: Instalar Google Cloud SDK
         uses: google-github-actions/setup-gcloud@v1
         with:
           project_id: ${{ env.GCP_PROJECT_ID }}
           install_components: gsutil
 
-      - name: Criar credencial local do authorized_user
-        run: |
-          mkdir -p "${{ github.workspace }}/gcloud"
-          echo '${{ secrets.GCLOUD_AUTH_USER_JSON }}' > "${{ github.workspace }}/gcloud/auth.json"
-
-      - name: Autenticar e configurar projeto
-        run: |
-          gcloud auth application-default login --quiet --scopes=https://www.googleapis.com/auth/cloud-platform \
-            --client-id-file="${{ github.workspace }}/gcloud/auth.json" || true
-          gcloud auth activate-service-account --key-file="${{ github.workspace }}/gcloud/auth.json" || true
-          gcloud config set project $GCP_PROJECT_ID
-        env:
-          GOOGLE_APPLICATION_CREDENTIALS: ${{ github.workspace }}/gcloud/auth.json
+      - name: Verificar identidade
+        run: gcloud auth list
 
   upload-dag:
     name: Upload da DAG para o Composer
@@ -70,8 +63,6 @@ jobs:
       - name: Upload da DAG
         run: |
           gsutil cp dags/pipeline.py gs://$COMPOSER_BUCKET/dags/
-        env:
-          GOOGLE_APPLICATION_CREDENTIALS: ${{ github.workspace }}/gcloud/auth.json
 
   upload-source:
     name: Upload do código Python para o Composer
@@ -88,5 +79,21 @@ jobs:
           gsutil -m cp -r domain gs://$COMPOSER_BUCKET/data/$CODE_PATH/
           gsutil -m cp -r infrastructure gs://$COMPOSER_BUCKET/data/$CODE_PATH/
           gsutil -m cp -r app gs://$COMPOSER_BUCKET/data/$CODE_PATH/
-        env:
-          GOOGLE_APPLICATION_CREDENTIALS: ${{ github.workspace }}/gcloud/auth.json
+  upload-requirements:
+    name: Upload do requirements.txt
+    runs-on: ubuntu-latest
+    needs: setup-gcloud
+    steps:
+      - name: Checkout do código
+        uses: actions/checkout@v3
+
+      - name: Instalar poetry
+        run: pip install poetry
+
+      - name: Exportar requirements.txt
+        run: |
+          poetry export -f requirements.txt --without-hashes -o requirements.txt
+
+      - name: Upload requirements.txt para Composer
+        run: |
+          gsutil cp requirements.txt gs://$COMPOSER_BUCKET/data/$CODE_PATH/
