--- a/.github/workflows/deploy-composer.yml
+++ b/.github/workflows/deploy-composer.yml
@@ -16,14 +16,12 @@ jobs:
   checkout:
     name: Checkout do código
     runs-on: ubuntu-latest
-    outputs:
-      python-path: ${{ steps.set-path.outputs.python-path }}
     steps:
       - name: Checkout do código
         uses: actions/checkout@v3
 
-  setup-gcloud:
-    name: Instalar e configurar o Google Cloud
+  auth:
+    name: Autenticação com Service Account
     runs-on: ubuntu-latest
     needs: checkout
     steps:
@@ -31,61 +29,62 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Autenticar via Service Account
-        uses: google-github-actions/auth@v2
+        uses: google-github-actions/auth@v1
         with:
           credentials_json: '${{ secrets.GCP_SA_KEY_JSON }}'
 
-      - name: Instalar Google Cloud SDK
+      - name: Instalar Google Cloud SDK com gsutil
         uses: google-github-actions/setup-gcloud@v1
         with:
           project_id: ${{ env.GCP_PROJECT_ID }}
           install_components: gsutil
 
-      - name: Verificar identidade
+      - name: Verificar identidade do gcloud
         run: gcloud auth list
 
   upload-dag:
     name: Upload da DAG para o Composer
     runs-on: ubuntu-latest
-    needs: setup-gcloud
+    needs: auth
     steps:
       - name: Checkout do código
         uses: actions/checkout@v3
 
-      - name: Upload da DAG
+      - name: Upload do arquivo da DAG
         run: |
           gsutil cp dags/pipeline.py gs://$COMPOSER_BUCKET/dags/
 
   upload-source:
     name: Upload do código Python para o Composer
     runs-on: ubuntu-latest
-    needs: setup-gcloud
+    needs: auth
     steps:
       - name: Checkout do código
         uses: actions/checkout@v3
 
-      - name: Upload do código fonte
+      - name: Upload dos diretórios de código para o Composer
         run: |
           gsutil -m cp -r application gs://$COMPOSER_BUCKET/data/$CODE_PATH/
           gsutil -m cp -r configs gs://$COMPOSER_BUCKET/data/$CODE_PATH/
           gsutil -m cp -r domain gs://$COMPOSER_BUCKET/data/$CODE_PATH/
           gsutil -m cp -r infrastructure gs://$COMPOSER_BUCKET/data/$CODE_PATH/
           gsutil -m cp -r app gs://$COMPOSER_BUCKET/data/$CODE_PATH/
+
   upload-requirements:
-    name: Upload do requirements.txt
+    name: Exportar e enviar requirements.txt
     runs-on: ubuntu-latest
-    needs: setup-gcloud
+    needs: auth
     steps:
       - name: Checkout do código
         uses: actions/checkout@v3
 
-      - name: Instalar poetry
+      - name: Instalar Poetry
         run: pip install poetry
 
       - name: Exportar requirements.txt
         run: |
           poetry export -f requirements.txt --without-hashes -o requirements.txt
 
-      - name: Upload requirements.txt para Composer
+      - name: Upload do requirements.txt
         run: |
           gsutil cp requirements.txt gs://$COMPOSER_BUCKET/data/$CODE_PATH/
