--- a/.github/workflows/deploy-composer.yml
+++ b/.github/workflows/deploy-composer.yml
@@ -45,7 +45,7 @@ jobs:
   upload-dag:
     name: Upload da DAG para o Composer
     runs-on: ubuntu-latest
-    needs: checkout
+    needs: auth
     steps:
       - uses: actions/checkout@v3
 
@@ -62,7 +62,7 @@ jobs:
 
       - name: Upload da DAG
         run: |
-          gsutil cp dags/pipeline.py gs://$COMPOSER_BUCKET/dags/
+          gsutil cp dags/pipeline.py gs://$COMPOSER_BUCKET/dags/$CODE_PATH
 
   upload-source:
     name: Upload do código Python para o Composer
