--- a/.github/workflows/deploy-composer.yml
+++ b/.github/workflows/deploy-composer.yml
@@ -12,7 +12,6 @@ env:
   DOCKER_IMAGE_TAG: latest
 
 jobs:
-
   build-and-push:
     name: Build e Push da Imagem para GHCR
     runs-on: ubuntu-latest
@@ -36,7 +35,7 @@ jobs:
           docker push "$IMAGE_NAME"
 
   upload-dag:
-    name: Upload da DAG para o Composer
+    name: Upload da DAG e Docker config para o Composer
     runs-on: ubuntu-latest
     needs: build-and-push
 
@@ -61,3 +60,10 @@ jobs:
       - name: ☁️ Upload da DAG para o Composer
         run: |
           gsutil cp dags/pipeline.py gs://$COMPOSER_BUCKET/dags/grupo_2/
+
+      - name: 🔄 Gerar Docker config e subir para o GCS
+        run: |
+          mkdir -p docker_auth
+          echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
+          cat ~/.docker/config.json > docker_auth/config.json
+          gsutil cp docker_auth/config.json gs://$COMPOSER_BUCKET/data/$CODE_PATH/docker_auth_config.json
