Added config to auth in GC

--- a/.github/workflows/deploy-composer.yml
+++ b/.github/workflows/deploy-composer.yml
@@ -24,9 +24,8 @@ jobs:
       - name: 📦 Checkout do código
         uses: actions/checkout@v3
 
-      - name: 🔐 Login no Docker Hub
-        run: |
-          echo "${{ secrets.DOCKERHUB_TOKEN }}" | docker login -u "${{ secrets.DOCKERHUB_USERNAME }}" --password-stdin
+      - name: 🔐 Login no DockerHub
+        run: echo "${{ secrets.DOCKERHUB_TOKEN }}" | docker login -u "${{ secrets.DOCKERHUB_USERNAME }}" --password-stdin
 
       - name: 🛠️ Build da imagem Docker
         run: |
