--- a/.github/workflows/deploy-composer.yml
+++ b/.github/workflows/deploy-composer.yml
@@ -24,6 +24,9 @@ jobs:
       - name: 📦 Checkout do código
         uses: actions/checkout@v3
 
+      - name: 📝 Salvar gcp-key.json
+        run: echo '${{ secrets.GCP_SA_KEY_JSON }}' > gcp-key.json
+
       - name: 🔐 Login no DockerHub
         run: echo "${{ secrets.DOCKERHUB_TOKEN }}" | docker login -u "${{ secrets.DOCKERHUB_USERNAME }}" --password-stdin
 
