--- a/.github/workflows/deploy-composer.yml
+++ b/.github/workflows/deploy-composer.yml
@@ -13,51 +13,79 @@ env:
   DOCKER_IMAGE_NAME: grupo-2-pipeline-app
   DOCKER_IMAGE_TAG: latest
   DOCKERHUB_REPO: michelgomessilvax/grupo-2-pipeline-app
+  DAG_PATH: dags/pipeline.py
   FULL_IMAGE: michelgomessilvax/grupo-2-pipeline-app:latest
+
 
 jobs:
   build-and-push:
-    name: Build e Push da Imagem para o Docker Hub
     runs-on: ubuntu-latest
-
+    outputs:
+      image_ref: ${{ steps.build.outputs.image_ref }}
+      image_digest: ${{ steps.build.outputs.digest }}
     steps:
-      - name: 📦 Checkout do código
-        uses: actions/checkout@v3
+      - uses: actions/checkout@v4
 
-      - name: 📝 Salvar gcp-key.json
+      - name: Save gcp-key.json
         run: echo '${{ secrets.GCP_SA_KEY_JSON }}' > gcp-key.json
 
-      - name: 🔐 Login no DockerHub
-        run: echo "${{ secrets.DOCKERHUB_TOKEN }}" | docker login -u "${{ secrets.DOCKERHUB_USERNAME }}" --password-stdin
+      - name: Login no DockerHub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      - name: 🛠️ Build da imagem Docker
-        run: |
-          docker build -t ${{ env.FULL_IMAGE }} .
+      - name: Gera tags/labels
+        id: meta
+        uses: docker/metadata-action@v5
+        with:
+          images: ${{ env.DOCKERHUB_REPO }}
+          tags: |
+            type=sha,format=short
+            type=date,format=YYYYMMDD-HHmmss
+            type=raw,value=latest
 
-      - name: 🚀 Push da imagem para o Docker Hub
+      - name: Build & Push
+        id: build
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          push: true
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
+
+      - name: Define referência final (usa sha curto)
+        id: ref
         run: |
-          docker push ${{ env.FULL_IMAGE }}
+          SHORT_SHA=$(echo "${GITHUB_SHA}" | cut -c1-7)
+          IMG_REF="${{ env.DOCKERHUB_REPO }}:${SHORT_SHA}"
+          echo "image_ref=$IMG_REF" >> $GITHUB_OUTPUT
+
+      - name: Exporta digest
+        run: echo "digest=${{ steps.build.outputs.digest }}" >> $GITHUB_OUTPUT
 
   upload-dag:
-    name: Upload da DAG para o Composer
     runs-on: ubuntu-latest
     needs: build-and-push
-
     steps:
-      - name: 📦 Checkout do código
-        uses: actions/checkout@v3
+      - uses: actions/checkout@v4
 
-      - name: 🔐 Autenticação via Service Account (GCP)
-        uses: google-github-actions/auth@v1
+      - name: Autentica no GCP
+        uses: google-github-actions/auth@v2
         with:
           credentials_json: '${{ secrets.GCP_SA_KEY_JSON }}'
 
-      - name: ⚙️ Setup Google Cloud SDK com gsutil
-        uses: google-github-actions/setup-gcloud@v1
+      - name: Setup gcloud
+        uses: google-github-actions/setup-gcloud@v2
         with:
           project_id: ${{ env.GCP_PROJECT_ID }}
           install_components: gsutil
 
-      - name: ☁️ Upload da DAG para o Composer
+      - name: Substitui IMAGE_URI no DAG
         run: |
-          gsutil cp dags/pipeline.py gs://$COMPOSER_BUCKET/dags/grupo_2/
+          IMG="${{ needs.build-and-push.outputs.image_ref }}"
+          sed -i "s|^IMAGE_URI = .*|IMAGE_URI = \"${IMG}\"|g" ${{ env.DAG_PATH }}
+
+      - name: Upload da DAG
+        run: |
+          gsutil cp ${{ env.DAG_PATH }} gs://${{ env.COMPOSER_BUCKET }}/dags/grupo_2/
