--- a/.github/workflows/deploy-composer.yml
+++ b/.github/workflows/deploy-composer.yml
@@ -35,14 +35,14 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      - name: Gera tags/labels
+      - name: Gerar metadados da imagem (tags e labels)
         id: meta
         uses: docker/metadata-action@v5
         with:
           images: ${{ env.DOCKERHUB_REPO }}
           tags: |
             type=sha,format=short
-            type=date,format=YYYYMMDD-HHmmss
+            type=ref,event=branch
             type=raw,value=latest
 
       - name: Build & Push
