--- a/.github/workflows/deploy-composer.yml
+++ b/.github/workflows/deploy-composer.yml
@@ -16,13 +16,11 @@ env:
   DAG_PATH: dags/pipeline.py
   FULL_IMAGE: michelgomessilvax/grupo-2-pipeline-app:latest
 
-
 jobs:
   build-and-push:
     runs-on: ubuntu-latest
     outputs:
-      image_ref: ${{ steps.build.outputs.image_ref }}
-      image_digest: ${{ steps.build.outputs.digest }}
+      image_ref: ${{ steps.ref.outputs.image_ref }}
     steps:
       - uses: actions/checkout@v4
 
@@ -59,10 +57,7 @@ jobs:
         run: |
           SHORT_SHA=$(echo "${GITHUB_SHA}" | cut -c1-7)
           IMG_REF="${{ env.DOCKERHUB_REPO }}:${SHORT_SHA}"
-          echo "image_ref=$IMG_REF" >> $GITHUB_OUTPUT
-
-      - name: Exporta digest
-        run: echo "digest=${{ steps.build.outputs.digest }}" >> $GITHUB_OUTPUT
+          echo "image_ref=$IMG_REF" >> "$GITHUB_OUTPUT"
 
   upload-dag:
     runs-on: ubuntu-latest
