--- a/.github/workflows/deploy-composer.yml
+++ b/.github/workflows/deploy-composer.yml
@@ -19,7 +19,7 @@ jobs:
   build-and-push:
     runs-on: ubuntu-latest
     outputs:
-      image_ref: ${{ steps.export.outputs.image_ref }}
+      short_sha: ${{ steps.export.outputs.short_sha }}
     steps:
       - uses: actions/checkout@v4
 
@@ -51,18 +51,35 @@ jobs:
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
 
-      - name: Exporta referência final da imagem
+      - name: Substitui IMAGE_URI no DAG
         id: export
         run: |
           SHORT_SHA=$(echo "${GITHUB_SHA}" | cut -c1-7)
           IMG_REF="${{ env.DOCKERHUB_REPO }}:${SHORT_SHA}"
-          echo "image_ref=$IMG_REF" >> "$GITHUB_OUTPUT"
+          echo "Substituindo na DAG: $IMG_REF"
+          sed -i "s|__IMAGE_PLACEHOLDER__|$IMG_REF|g" ${{ env.DAG_PATH }}
+          echo "short_sha=$SHORT_SHA" >> "$GITHUB_OUTPUT"
+
+      - name: Verifica substituição
+        run: grep IMAGE_URI ${{ env.DAG_PATH }}
+
+      - name: Upload DAG modificada como artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: dag-pipeline
+          path: ${{ env.DAG_PATH }}
 
   upload-dag:
     runs-on: ubuntu-latest
     needs: build-and-push
     steps:
       - uses: actions/checkout@v4
+
+      - name: Baixa DAG modificada
+        uses: actions/download-artifact@v4
+        with:
+          name: dag-pipeline
+          path: dags/
 
       - name: Autentica no GCP
         uses: google-github-actions/auth@v2
@@ -75,26 +92,9 @@ jobs:
           project_id: ${{ env.GCP_PROJECT_ID }}
           install_components: gsutil
 
-      - name: Verifica conteúdo original da DAG (antes do sed)
-        run: cat ${{ env.DAG_PATH }}
-
-      - name: Verifica IMAGE_URI original na DAG
-        run: grep IMAGE_URI ${{ env.DAG_PATH }}
-
-      - name: Verifica conteúdo com linha
-        run: cat -n ${{ env.DAG_PATH }}
-
-      - name: Substitui IMAGE_URI no DAG
-        run: |
-          IMG="${{ needs.build-and-push.outputs.image_ref }}"
-          sed -i "s|__IMAGE_PLACEHOLDER__|${IMG}|g" ${{ env.DAG_PATH }}
-
-      - name: Verifica substituição no DAG
-        run: grep IMAGE_URI ${{ env.DAG_PATH }}
-
       - name: Verifica DAG final (debug)
-        run: cat ${{ env.DAG_PATH }}
+        run: cat dags/pipeline.py
 
-      - name: Upload da DAG
+      - name: Upload da DAG para o Composer
         run: |
-          gsutil cp ${{ env.DAG_PATH }} gs://${{ env.COMPOSER_BUCKET }}/dags/grupo_2/
+          gsutil cp dags/pipeline.py gs://${{ env.COMPOSER_BUCKET }}/dags/grupo_2/
