--- a/.github/workflows/deploy-composer.yml
+++ b/.github/workflows/deploy-composer.yml
@@ -1,4 +1,4 @@
-name: Build & Deploy DAG with Docker via Artifact Registry
+name: Deploy to Cloud Composer
 
 on:
   push:
@@ -8,56 +8,117 @@ env:
   GCP_PROJECT_ID: data-eng-dev-437916
   COMPOSER_BUCKET: europe-west1-airflow-196fdba9-bucket
   CODE_PATH: grupo-2
-  REGION: europe-west1
-  REPO_NAME: pipelines
-  DOCKER_IMAGE_NAME: grupo-2-pipeline-app
-  DOCKER_IMAGE_TAG: latest
-  DOCKERHUB_REPO: michelgomessilvax/grupo-2-pipeline-app
-  FULL_IMAGE: michelgomessilvax/grupo-2-pipeline-app:latest
+  APP_ENV: production
+  APP_BASE_PATH: /home/airflow/gcs/data/grupo-2
 
 jobs:
-  build-and-push:
-    name: Build e Push da Imagem para o Docker Hub
-    runs-on: ubuntu-latest
 
+  checkout:
+    name: Checkout do código
+    runs-on: ubuntu-latest
     steps:
-      - name: 📦 Checkout do código
+      - name: Checkout do código
         uses: actions/checkout@v3
 
-      - name: 📝 Salvar gcp-key.json
-        run: echo '${{ secrets.GCP_SA_KEY_JSON }}' > gcp-key.json
-
-      - name: 🔐 Login no DockerHub
-        run: echo "${{ secrets.DOCKERHUB_TOKEN }}" | docker login -u "${{ secrets.DOCKERHUB_USERNAME }}" --password-stdin
-
-      - name: 🛠️ Build da imagem Docker
-        run: |
-          docker build -t ${{ env.FULL_IMAGE }} .
-
-      - name: 🚀 Push da imagem para o Docker Hub
-        run: |
-          docker push ${{ env.FULL_IMAGE }}
-
-  upload-dag:
-    name: Upload da DAG para o Composer
+  auth:
+    name: Autenticação com Service Account
     runs-on: ubuntu-latest
-    needs: build-and-push
-
+    needs: checkout
     steps:
-      - name: 📦 Checkout do código
+      - name: Checkout do código
         uses: actions/checkout@v3
 
-      - name: 🔐 Autenticação via Service Account (GCP)
+      - name: Autenticar via Service Account
         uses: google-github-actions/auth@v1
         with:
           credentials_json: '${{ secrets.GCP_SA_KEY_JSON }}'
 
-      - name: ⚙️ Setup Google Cloud SDK com gsutil
+      - name: Instalar Google Cloud SDK com gsutil
         uses: google-github-actions/setup-gcloud@v1
         with:
           project_id: ${{ env.GCP_PROJECT_ID }}
           install_components: gsutil
 
-      - name: ☁️ Upload da DAG para o Composer
+      - name: Verificar identidade do gcloud
+        run: gcloud auth list
+
+  upload-dag:
+    name: Upload da DAG para o Composer
+    runs-on: ubuntu-latest
+    needs: auth
+    steps:
+      - uses: actions/checkout@v3
+
+      - name: Autenticar via Service Account
+        uses: google-github-actions/auth@v1
+        with:
+          credentials_json: '${{ secrets.GCP_SA_KEY_JSON }}'
+
+      - name: Instalar Google Cloud SDK
+        uses: google-github-actions/setup-gcloud@v1
+        with:
+          project_id: ${{ env.GCP_PROJECT_ID }}
+          install_components: gsutil
+
+      - name: Upload da DAG
         run: |
-          gsutil cp dags/pipeline.py gs://$COMPOSER_BUCKET/dags/grupo_2/
+          gsutil cp dags/pipeline.py gs://$COMPOSER_BUCKET/dags/grupo_2
+
+  upload-source:
+    name: Upload do código Python para o Composer
+    runs-on: ubuntu-latest
+    needs: auth
+    steps:
+      - name: Checkout do código
+        uses: actions/checkout@v3
+
+      - name: Autenticar via Service Account
+        uses: google-github-actions/auth@v1
+        with:
+          credentials_json: '${{ secrets.GCP_SA_KEY_JSON }}'
+
+      - name: Instalar Google Cloud SDK
+        uses: google-github-actions/setup-gcloud@v1
+        with:
+          project_id: ${{ env.GCP_PROJECT_ID }}
+          install_components: gsutil
+
+      - name: Upload dos diretórios de código para o Composer
+        run: |
+          gsutil -m cp -r application gs://$COMPOSER_BUCKET/data/$CODE_PATH/
+          gsutil -m cp -r configs gs://$COMPOSER_BUCKET/data/$CODE_PATH/
+          gsutil -m cp -r domain gs://$COMPOSER_BUCKET/data/$CODE_PATH/
+          gsutil -m cp -r infrastructure gs://$COMPOSER_BUCKET/data/$CODE_PATH/
+          gsutil -m cp -r app gs://$COMPOSER_BUCKET/data/$CODE_PATH/
+
+  upload-requirements:
+    name: Upload do requirements.txt
+    runs-on: ubuntu-latest
+    needs: auth
+    steps:
+      - name: Checkout do código
+        uses: actions/checkout@v3
+
+      - name: Autenticar via Service Account
+        uses: google-github-actions/auth@v1
+        with:
+          credentials_json: '${{ secrets.GCP_SA_KEY_JSON }}'
+
+      - name: Instalar Google Cloud SDK
+        uses: google-github-actions/setup-gcloud@v1
+        with:
+          project_id: ${{ env.GCP_PROJECT_ID }}
+          install_components: gsutil
+
+      - name: Instalar Poetry 1.8.2
+        run: |
+          curl -sSL https://install.python-poetry.org | python3 - --version 1.8.2
+          echo "$HOME/.local/bin" >> $GITHUB_PATH
+
+      - name: Exportar requirements.txt
+        run: |
+          poetry export -f requirements.txt --without-hashes -o requirements.txt
+
+      - name: Upload requirements.txt para Composer
+        run: |
+          gsutil cp requirements.txt gs://$COMPOSER_BUCKET/data/$CODE_PATH/
