--- a/.dockerignore
+++ b/.dockerignore
@@ -41,10 +41,9 @@ airflow.db
 airflow-webserver.pid
 
 # DBT artefatos
-dbt_project/target/
-dbt_project/dbt_modules/
-dbt_project/logs/
-dbt_project/.dbt/
+dbt/target/
+dbt/dbt_modules/
+dbt/logs/
 
 # Docker
 Dockerfile
