--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,8 @@ packages = [{ include = "app" }]
 [tool.poetry.dependencies]
 python = ">=3.10,<4.0"
 google-cloud-storage = "^2.16.0"
+dbt-core = "^1.7.0"
+dbt-bigquery = "^1.7.0"
 
 # Utilitários
 python-dotenv = "^1.0.1"
